--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,11 @@ python:
 notifications:
   email: false
 
+# whitelist
+branches:
+  only:
+    - cli
+
 # Setup anaconda
 before_install:
   - if [ ${TRAVIS_PYTHON_VERSION:0:1} == "2" ]; then wget http://repo.continuum.io/miniconda/Miniconda-2.0.0-Linux-x86_64.sh -O miniconda.sh; else wget http://repo.continuum.io/miniconda/Miniconda3-2.0.0-Linux-x86_64.sh -O miniconda.sh; fi
