add --yes for conda

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ before_install:
   - sudo ln -s /run/shm /dev/shm
 # Install conda packages
 install:
-  - conda install -c https://conda.binstar.org/faircloth-lab python=$TRAVIS_PYTHON_VERSION numpy=1.7 biopython=1.62 pytest=2.4.2 abyss velvet lastz mafft
+  - conda install --yes -c https://conda.binstar.org/faircloth-lab python=$TRAVIS_PYTHON_VERSION numpy=1.7 biopython=1.62 pytest=2.4.2 abyss velvet lastz mafft
 
 # Run test
 script:
