--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,11 @@
 language: python
 python:
   - 2.7
+
 notifications:
-  email: false
+  email:
+    recipients:
+      - brant@faircloth-lab.org
 
 # whitelist
 branches:
